# Roster-Time-Reader

./: .gitignore  Attendant_Carwash_Roster.xls  Attendant_Carwash_Roster.xlsx  CASHIERS_ROSTER.xls  CASHIERS_ROSTER.xlsx  READ ME.txt  README.md  pyproject.toml  requirements.txt
App/: attendants.py  bakery.py  build_excel.py  builder.py  cashiers.py  format.py  main.py
